--- a/package.json
+++ b/package.json
@@ -1,22 +1,57 @@
 {
-  "name": "monster-card-battle",
+  "name": "crypto-cafe",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:proxy": "cd frpc && ./frpc -c frpc.ini"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@openzeppelin/contracts": "^4.4.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@walletconnect/web3-provider": "^1.6.6",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
+    "antd": "^4.16.13",
+    "babel-plugin-import": "^1.13.1",
+    "moralis": "^0.0.135",
     "next": "12.0.7",
+    "next-compose-plugins": "^2.2.1",
+    "next-plugin-antd-less": "^1.6.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-blockies": "^1.4.1",
+    "react-dom": "17.0.2",
+    "react-moralis": "^0.3.0",
+    "styled-components": "^5.2.1",
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@nomiclabs/hardhat-ethers": "^2.0.3",
+    "@nomiclabs/hardhat-etherscan": "^2.1.8",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/hardhat": "^3.0.0",
+    "@types/antd": "^1.0.0",
     "@types/node": "16.11.13",
     "@types/react": "17.0.37",
+    "@types/styled-components": "5.1.4",
+    "babel-plugin-styled-components": "^1.13.3",
+    "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.2",
+    "hardhat": "^2.8.0",
+    "hardhat-gas-reporter": "^1.0.6",
+    "solidity-coverage": "^0.7.17",
+    "ts-node": "^10.4.0",
     "typescript": "4.5.4"
   }
 }
