--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/ethers-v5": "^8.0.5",
     "@typechain/hardhat": "^3.0.0",
     "@types/antd": "^1.0.0",
     "@types/node": "16.11.13",
@@ -52,6 +53,7 @@
     "hardhat-gas-reporter": "^1.0.6",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.4.0",
+    "typechain": "^6.0.5",
     "typescript": "4.5.4"
   }
 }
