--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-moralis": "^0.3.0",
     "styled-components": "^5.2.1",
+    "swiper": "^7.3.3",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
