--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "start:proxy": "cd frpc && ./frpc -c frpc.ini"
+    "start:proxy": "cd frpc && ./frpc -c frpc.ini",
+    "deploy:cloud": "moralis-admin-cli watch-cloud-folder --moralisApiKey DboPH8ktrhFr3ab --moralisApiSecret R4kAK86Pt6rT0wU --moralisSubdomain yoxka8vckd1c.usemoralis.com --autoSave 1 --moralisCloudfolder /Users/boatnoodle/workspaces/crypto-cafe/cloud"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
@@ -18,6 +19,7 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "babel-plugin-import": "^1.13.1",
     "moralis": "^0.0.135",
     "next": "12.0.7",
