--- a/smart-contract/tsconfig.json
+++ b/smart-contract/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
     "target": "es2018",
     "module": "commonjs",
     "strict": true,
@@ -8,5 +9,6 @@
     "declaration": true
   },
   "include": ["./scripts", "./test", "./typechain"],
-  "files": ["./hardhat.config.ts"]
+  "files": ["./hardhat.config.ts"],
+  "exclude": ["node_modules"]
 }
